Fixed issue with spacing when comments are disabled on pages

--- a/style.css
+++ b/style.css
@@ -452,6 +452,10 @@ img.wp-smiley,
 	padding: 0 0 30px 0;
 }
 
+#primary.no-comments {
+	margin-bottom: 40px;
+}
+
 .home #primary,
 .archive #primary,
 .tag #primary,
